tests modified
